fixed menu height on mobile & rm unecessity

--- a/src/style.css
+++ b/src/style.css
@@ -521,36 +521,32 @@ video {
   position: absolute;
 }
 
+.bottom-0 {
+  bottom: 0px;
+}
+
 .right-8 {
   right: 2rem;
-}
-
-.top-0 {
-  top: 0px;
-}
-
-.left-full {
-  left: 100%;
 }
 
 .right-full {
   right: 100%;
 }
 
-.-right-full {
-  right: -100%;
-}
-
-.bottom-0 {
-  bottom: 0px;
-}
-
-.right-0 {
-  right: 0px;
+.top-0 {
+  top: 0px;
 }
 
 .right-1\/2 {
   right: 50%;
+}
+
+.top-32 {
+  top: 8rem;
+}
+
+.-right-1\/2 {
+  right: -50%;
 }
 
 .m-5 {
@@ -603,10 +599,6 @@ video {
   height: 8rem;
 }
 
-.h-40 {
-  height: 10rem;
-}
-
 .h-64 {
   height: 16rem;
 }
@@ -617,18 +609,6 @@ video {
 
 .h-96 {
   height: 24rem;
-}
-
-.h-\[calc\] {
-  height: calc;
-}
-
-.h-\[calc\(\)\] {
-  height: calc();
-}
-
-.h-\[calc\(100vh\)\] {
-  height: calc(100vh);
 }
 
 .h-\[calc\(100vh-8rem\)\] {
@@ -647,6 +627,10 @@ video {
   width: 91.666667%;
 }
 
+.w-32 {
+  width: 8rem;
+}
+
 .w-7 {
   width: 1.75rem;
 }
@@ -663,24 +647,12 @@ video {
   width: 100%;
 }
 
-.w-1\/3 {
-  width: 33.333333%;
-}
-
-.w-1\/4 {
-  width: 25%;
-}
-
-.min-w-\[8rem\] {
-  min-width: 8rem;
-}
-
-.max-w-\[8rem\] {
-  max-width: 8rem;
-}
-
 .scroll-pt-40 {
   scroll-padding-top: 10rem;
+}
+
+.scroll-pt-32 {
+  scroll-padding-top: 8rem;
 }
 
 .flex-col {
@@ -697,10 +669,6 @@ video {
 
 .justify-evenly {
   justify-content: space-evenly;
-}
-
-.gap-10 {
-  gap: 2.5rem;
 }
 
 .overflow-hidden {
@@ -736,20 +704,12 @@ video {
   border-width: 4px;
 }
 
-.border-l {
-  border-left-width: 1px;
-}
-
-.border-r-2 {
-  border-right-width: 2px;
+.border-b-4 {
+  border-bottom-width: 4px;
 }
 
 .border-r-4 {
   border-right-width: 4px;
-}
-
-.border-b-4 {
-  border-bottom-width: 4px;
 }
 
 .bg-gray-900 {
@@ -881,20 +841,6 @@ video {
   transition-duration: 150ms;
 }
 
-.transition {
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
-}
-
-.transition-transform {
-  transition-property: transform;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
-}
-
 .duration-300 {
   transition-duration: 300ms;
 }
@@ -982,9 +928,17 @@ video {
     height: fit-content;
   }
 
+  .md\:h-auto {
+    height: auto;
+  }
+
   .md\:w-fit {
     width: -moz-fit-content;
     width: fit-content;
+  }
+
+  .md\:w-auto {
+    width: auto;
   }
 
   .md\:flex-row {
@@ -993,10 +947,6 @@ video {
 
   .md\:gap-10 {
     gap: 2.5rem;
-  }
-
-  .md\:border {
-    border-width: 1px;
   }
 
   .md\:border-0 {
